# meteo_sense

./: .gitignore  CMakeLists.txt  README.md
Core/Inc/: lora_sx1276.h  main.h  pwm_task.h  stm32f1xx_hal_conf.h  task.h
Core/Src/: main.c  pwm_task.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  task.c
Drivers/CMSIS/Device/: system_stm32f1xx.c
Drivers/STM32F1xx_HAL_Driver/Inc/: stm32f1xx_hal_def.h
openocd_scripts/: ocd_lock.cfg  stm32f4_stlink.cfg
